Categories page add

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% block title %} Login
+{% endblock title %} {% block content %}
 <div class="card auth-card card-body mx-auto my-4 shadow-sm">
   <h1 class="display-4 text-center">Login</h1>
   <form method="POST">
