--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% block title %}
+Register {% endblock title %} {% block content %}
 <div class="card card-body mx-auto my-4 auth-card shadow-sm">
   <h1 class="display-4 text-center">Register</h1>
   <form method="POST">
