--- a/orders/templates/orders/order_invoice.html
+++ b/orders/templates/orders/order_invoice.html
@@ -17,7 +17,7 @@
       </h4>
       <h4 class="font-weight-light">{{order.address}}</h4>
       <h4 class="font-weight-light mb-3">{{order.city}}, {{order.pin_code}}</h4>
-      <h5 class="font-weight-light mb-4">Place on {{order.created}}</h5>
+      <h5 class="font-weight-light mb-4">Placed on {{order.created}}</h5>
       <hr />
       <table class="table table-striped mt-4">
         <thead class="table-dark">
