--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-Commerce</title>
+    <title>{% block title %} {% endblock title %}</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-md">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
       <div class="container">
         <a href="#" class="navbar-brand">E-Commerce</a>
         <button
@@ -34,11 +34,32 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a href="{% url 'store:product_list' %}" class="nav-link">
-                Store
+                <i class="fa fa-shopping-bag fa-lg mr-1"></i> Store
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'store:categories_list' %}" class="nav-link">
+                <i class="fa fa-shopping-basket fa-lg mr-1"></i> Categories
               </a>
             </li>
           </ul>
-          <ul class="navbar-nav ml-auto">
+          <form action="/" class="inline-form mr-md-2 ml-auto">
+            <div class="input-group">
+              <input
+                required
+                type="text"
+                name="name"
+                placeholder="Search items"
+                class="form-control"
+              />
+              <div class="input-group-append">
+                <button type="submit" class="btn-success btn btn-sm">
+                  <i class="fa fa-search fa-lg"></i>
+                </button>
+              </div>
+            </div>
+          </form>
+          <ul class="navbar-nav">
             {% if user.is_authenticated %}
             <li class="nav-item">
               <a href="{% url 'orders:my' %}" class="nav-link">
