--- a/accounts/templates/registration/logged_out.html
+++ b/accounts/templates/registration/logged_out.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} {% block title %} Logged Out {% endblock title %}
+{%block content %}
 <h1 class="display-4 my-2">Logged out</h1>
 <hr />
 <p>
