--- a/accounts/templates/registration/password_change_form.html
+++ b/accounts/templates/registration/password_change_form.html
@@ -1,4 +1,5 @@
-{% extends 'base.html'%} {% load crispy_forms_tags %} {% block content %}
+{% extends 'base.html'%} {% load crispy_forms_tags %} {% block title %} Change
+Password {% endblock title %} {% block content %}
 <h1 class="display-4 my-4">Change Password</h1>
 <hr />
 <form method="POST">
