--- a/accounts/templates/registration/password_reset_complete.html
+++ b/accounts/templates/registration/password_reset_complete.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} {% block title %} Password Reset Successful
+{%endblock title %} {% block content %}
 <h1 class="display-4 my-4">Password Reset Successful</h1>
 <hr />
 <p>
