--- a/accounts/templates/registration/password_reset_done.html
+++ b/accounts/templates/registration/password_reset_done.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} {% block title %} Reset Link Sent {% endblock title %}
+{% block content %}
 <h1 class="display-4 my-4">Reset Link Sent</h1>
 <hr />
 <p>
