--- a/accounts/templates/registration/password_reset_form.html
+++ b/accounts/templates/registration/password_reset_form.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% block title %} Reset
+Password {% endblock title %} {% block content %}
 <h1 class="display-4 my-4">Forgot Password</h1>
 <hr />
 <p>
