--- a/cart/templates/cart/cart_details.html
+++ b/cart/templates/cart/cart_details.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} {% block title %} Cart {% endblock title %}
+{% block content %}
 <h1 class="display-4 mt-4 text-center">Cart</h1>
 <hr />
 {% if total %}
