--- a/orders/templates/orders/order_details.html
+++ b/orders/templates/orders/order_details.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% load thumbnail %} {% block content %}
+{% extends 'base.html' %} {% load thumbnail %} {% block title %} Order no -
+{{order.id}} {% endblock title %} {% block content %}
 <h2 class="mt-4">Order id - {{order.id}}</h2>
 {% comment %}
 <h4 class="font-weight-light">
