--- a/orders/templates/orders/place_order.html
+++ b/orders/templates/orders/place_order.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% block title %} Place
+Order {% endblock title %} {% block content %}
 <div class="row my-3">
   <div class="col-md-6 col-12 mb-3">
     <div class="card">
