--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %} {% load crispy_forms_tags %} {% load thumbnail %}
+{%block title %} {{category.name|default:"Store"|title}} {% endblock title %}
 {%block content %}
 <div class="row mt-3">
   <div class="col-lg-3 col-md-6 col-12 mb-3">
     <div class="card card-body p-3 shadow-sm">
       <h2>Filter</h2>
-      <form>
+      <form class="filter-form">
         {{filter.form|crispy}}
         <button class="btn btn-info btn-block btn-sm" type="submit">
           Filter
@@ -13,6 +14,8 @@
     </div>
   </div>
   <div class="col-lg-9 col-md-6 col-12">
+    <h2 class="font-weight-light mb-2">{{category.name|default:'Products'}}</h2>
+    <hr />
     <div class="row">
       {% for product in products %}
       <div class="col-lg-4 col-12 mb-2 px-sm-1">
@@ -74,7 +77,7 @@
   </div>
 </div>
 <script>
-  let inputs = document.querySelectorAll(".form-control");
+  let inputs = document.querySelectorAll(".filter-form .form-control");
   inputs.forEach((i) => i.classList.add("form-control-sm"));
 </script>
 {% endblock content %}
