--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -92,10 +92,14 @@
             </li>
             {% else %}
             <li class="nav-item">
-              <a href="{% url 'login' %}" class="nav-link">Login</a>
+              <a href="{% url 'login' %}" class="nav-link">
+                <i class="fa fa-sign-in fa-lg"></i> Login
+              </a>
             </li>
             <li class="nav-item">
-              <a href="{% url 'register' %}" class="nav-link">Register</a>
+              <a href="{% url 'register' %}" class="nav-link">
+                <i class="fa fa-user-plus fa-lg"></i> Register
+              </a>
             </li>
             {% endif %}
           </ul>
