--- a/accounts/templates/registration/profile.html
+++ b/accounts/templates/registration/profile.html
@@ -7,6 +7,10 @@
   <div class="col-md-6 col-12 d-flex justify-content-center flex-column">
     <h4 class="text-center mb-3">Update Profile</h4>
     <form method="POST" style="width:100%">
+    <div class="form-group">
+      <label>Email</label>
+      <input readonly type="email" value="{{user.email}}" class="form-control" >
+    </div>
       {% csrf_token %} {{form|crispy}}
       <button class="btn btn-success" type="submit">Update Profile</button>
     </form>
