--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %} {% load crispy_forms_tags %} {% load thumbnail %}
-{%block title %} {{category.name|default:"Store"|title}} {% endblock title %}
+{%block title %}Store{% endblock title %}
 {%block content %}
 <div class="row mt-3">
   <div class="col-lg-3 col-md-6 col-12 mb-3">
-    <div class="card card-body p-3 shadow-sm">
+    <div class="card card-body p-3 shadow-sm sticky-top">
       <h2>Filter</h2>
       <form class="filter-form">
         {{filter.form|crispy}}
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div class="col-lg-9 col-md-6 col-12">
-    <h2 class="font-weight-light mb-2">{{category.name|default:'Products'}}</h2>
+    <h2 class="font-weight-light mb-2">Products</h2>
     <hr />
     <div class="row">
       {% for product in products %}
@@ -77,7 +77,11 @@
   </div>
 </div>
 <script>
-  let inputs = document.querySelectorAll(".filter-form .form-control");
-  inputs.forEach((i) => i.classList.add("form-control-sm"));
+  document.querySelector("#div_id_price > div").className = "d-flex justify-space-between align-items-center";
+  document.querySelectorAll("#div_id_price input").forEach((i) => {
+    i.classList.add("form-control")
+    i.style.minWidth = '10px'
+  });
+  document.querySelectorAll(".filter-form .form-control").forEach((i) => i.classList.add("form-control-sm"));
 </script>
 {% endblock content %}
